# OOP3

./: CMakeLists.txt
OOP3/: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  complex.cpp  complex.h  main.cpp  number.h  polynom.cpp  polynom.h
